--- a/src/FizzyLogic/package.json
+++ b/src/FizzyLogic/package.json
@@ -15,6 +15,7 @@
     "yargs-parser": ">=5.0.0-security.0"
   },
   "dependencies": {
+    "@toast-ui/editor": "^2.5.1",
     "bootstrap": "^5.0.0-beta1",
     "infinite-scroll": "^4.0.0-beta.0",
     "jquery": "^3.5.1"
