--- a/config/fizzylogic.nl-ssl.conf
+++ b/config/fizzylogic.nl-ssl.conf
@@ -3,11 +3,19 @@ server {
     listen [::]:443 ssl http2;
 
     server_name fizzylogic.nl;
+
+    # Hardening: Disable the version number in the server header.
+    server_tokens off;
+
     root /var/www/blog/wwwroot;
-    ssl_certificate /etc/letsencrypt/live/fizzylogic.nl/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/fizzylogic.nl/privkey.pem; # managed by Certbot
+
+    # SSL: This is managed by certbot. The certificate files are automatically updated.
+    ssl_certificate /etc/letsencrypt/live/fizzylogic.nl/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/fizzylogic.nl/privkey.pem;
     include /etc/nginx/snippets/ssl-params.conf;
 
+    # The following sections map static files to nginx rather than lettting 
+    # ASP.NET Core handle the static files. This is generally a bit faster.
     location /content/ {
          alias /var/www/blog/wwwroot/content/;
     }
@@ -24,18 +32,40 @@ server {
         alias /var/www/blog/wwwroot/fonts/;
     }
 
+    # The following section is specifically for the blazor SignalR endpoint.
+    # This configuration ensures we can use websockets instead of regular HTTP.
+    location /_blazor {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $http_host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection keep-alive;
+        proxy_set_header Connection "upgrade";
+        proxy_pass http://127.0.0.1:5000;      
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # The following section maps everything on the website to the ASP.NET core
+    # application that is running on the web host.
     location / {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $http_host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection keep-alive;
         proxy_pass http://127.0.0.1:5000;      
+        proxy_cache_bypass $http_upgrade;
     }
-  
+    
+    # The following section ensures that letsencrypt can access the necessary 
+    # metadata files on the server for automatic updates of the SSL certificates.
     location ~ /.well-known {
         allow all;
     }
 
-
+    # I'll allow 50 megabyte uploads to the server. 
+    # Note: Need to configure the same upload settings for ASP.NET core.
     client_max_body_size 50m;
 }
