--- a/config/nginx/fizzylogic.nl-ssl.conf
+++ b/config/nginx/fizzylogic.nl-ssl.conf
@@ -14,24 +14,6 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/fizzylogic.nl/privkey.pem;
     include /etc/nginx/snippets/ssl-params.conf;
 
-    # The following sections map static files to nginx rather than lettting 
-    # ASP.NET Core handle the static files. This is generally a bit faster.
-    location /content/ {
-         alias /var/www/blog/wwwroot/content/;
-    }
-
-    location /js/ {
-        alias /var/www/blog/wwwroot/js/;
-    }
-
-    location /css/ {
-        alias /var/www/blog/wwwroot/css/;
-    }
-
-    location /fonts/ {
-        alias /var/www/blog/wwwroot/fonts/;
-    }
-
     # The following section is specifically for the blazor SignalR endpoint.
     # This configuration ensures we can use websockets instead of regular HTTP.
     location /_blazor {
@@ -45,10 +27,16 @@ server {
         proxy_pass http://127.0.0.1:5000;      
         proxy_cache_bypass $http_upgrade;
     }
-
+    
+    # The following section allows the webserver to host the static files
+    # while everything else is forwarded to the @proxy location.
+    location / {
+        try_files $uri $uri @proxy;
+    }
+    
     # The following section maps everything on the website to the ASP.NET core
     # application that is running on the web host.
-    location / {
+    location @proxy {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
