--- a/config/nginx/fizzylogic.nl-ssl.conf
+++ b/config/nginx/fizzylogic.nl-ssl.conf
@@ -14,6 +14,12 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/fizzylogic.nl/privkey.pem;
     include /etc/nginx/snippets/ssl-params.conf;
 
+    # This section ensures that Ngnix will try to get static files from the root folder first.
+    # If that fails the request is forwarded to the @proxy location and handled by ASP.NET core.
+    location / {
+        try_files $uri $uri @proxy;
+    }
+
     # The following section is specifically for the blazor SignalR endpoint.
     # This configuration ensures we can use websockets instead of regular HTTP.
     location /_blazor {
@@ -26,12 +32,6 @@ server {
         proxy_set_header Connection "upgrade";
         proxy_pass http://127.0.0.1:5000;      
         proxy_cache_bypass $http_upgrade;
-    }
-    
-    # The following section allows the webserver to host the static files
-    # while everything else is forwarded to the @proxy location.
-    location / {
-        try_files $uri $uri @proxy;
     }
     
     # The following section maps everything on the website to the ASP.NET core
