--- a/src/FizzyLogic/package.json
+++ b/src/FizzyLogic/package.json
@@ -13,7 +13,8 @@
     "gulp-sass": "^4.1.0",
     "node-sass": "^5.0.0",
     "yargs-parser": ">=13.1.2",
-    "trim-newlines": ">=3.0.1"
+    "trim-newlines": ">=3.0.1",
+    "glob-parent": ">=5.1.2"
   },
   "dependencies": {
     "@toast-ui/editor": "^2.5.1",
